--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "cross-env ELEVENTY_ENV=dev eleventy --serve",
-    "build": "cross-env ELEVENTY_ENV=prod eleventy",
-    "seed": "cross-env ELEVENTY_ENV=seed eleventy"
+    "build": "cross-env ELEVENTY_ENV=prod eleventy && npm run copy-redirects",
+    "seed": "cross-env ELEVENTY_ENV=seed eleventy",
+    "copy-redirects": "cp _redirects dist/_redirects"
   },
   "repository": {
     "type": "git",
